<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="@android:color/transparent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="#989898" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/UiTestTextView"
                android:text="FAQ"
                android:layout_marginLeft="10dp"
                android:id="@+id/textView6"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="#979797" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:src="@drawable/ic_content_copy_white_48dp"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_height="match_parent"
                android:gravity="center" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/UiTestTextView10"
                    android:text="... Fragen und Antworten über doorEink"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/textView18" />

            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:id="@+id/scrollView2"
            android:background="#0fb0ef"
            android:layout_weight="0.55" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq1_q"
                        android:id="@+id/textView34" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq1_a"
                        android:id="@+id/editText2"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq2_q"
                        android:id="@+id/textView23" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq2_a"
                        android:id="@+id/textView21"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq3_q"
                        android:id="@+id/textView27" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq3_a"
                        android:id="@+id/textView26"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq4_q"
                        android:id="@+id/textView25" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq4_a"
                        android:id="@+id/textView28"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq5_q"
                        android:id="@+id/textView31" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq5_a"
                        android:id="@+id/textView30"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq6_q"
                        android:id="@+id/textView33" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq6_a"
                        android:id="@+id/textView32"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq7_q"
                        android:id="@+id/textView42" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq7_a"
                        android:id="@+id/textView41"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/UiTestTextView18"
                        android:text="@string/faq8_q"
                        android:id="@+id/textView44" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:textAppearance="@style/UiTestTextView10"
                        android:text="@string/faq8_a"
                        android:id="@+id/textView43"
                        android:layout_weight="1"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#ffffff">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#e1732a"
            android:layout_marginBottom="10dp">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>